Fix some FindBugs complaints
git-svn-id: https://svn.apache.org/repos/asf/turbine/fulcrum/trunk/intake@1538456 13f79535-47bb-0310-9956-ffa450edef68